--- a/css/styles.css
+++ b/css/styles.css
@@ -691,13 +691,13 @@ padding: 20px 0;
   width: 100%;
   padding: 20px 100px;
   padding-top: 30px;
-  justify-content: space-between;
+  /* justify-content: space-evenly; */
   align-items: center;
   background-color: black;
 }
 .nav-container-reg img {
   background-size: cover;
-  height: 30px;
+  height: 40px;
 }
 .formdiv{
   border-radius: 20px;
@@ -718,7 +718,7 @@ padding: 20px 0;
   height: 40px;
   margin: 10px 0;
   border-radius: 10px;
-
+padding: 10PX;
 }
 
 .formdiv label{
